tui/src/snapshots/estelle_tui__keymap_setup__tests__keymap_debug_view_delayed_hint.snap
---
source: tui/src/keymap_setup.rs
expression: rendered
---
Keypress Inspector
Press any key to see what Estelle receives. Esc is inspected; Ctrl+C closes.
If nothing changes on a keypress, the terminal is not sending that key. Only received keys can be
bound.

Waiting for a keypress...
