tui/src/snapshots/estelle_tui__keymap_setup__tests__keymap_debug_view_initial.snap
---
source: tui/src/keymap_setup.rs
expression: "render_debug(&view, 80)"
---
Keypress Inspector
Press any key to see what Estelle receives. Esc is inspected; Ctrl+C closes.
Estelle can only inspect keys the terminal sends.

Waiting for a keypress...
